<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Text_View_Question_Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Question_Number_Text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Text_View_Question"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/Sample_long_Text"


        android:textAlignment="center"
        android:textSize="34sp"
        app:autoSizeMaxTextSize="24sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/Answer_btn_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text_View_Question_Number"
        app:layout_constraintVertical_bias="0.546" />

    <Button
        android:id="@+id/Answer_btn_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ButtonConstraints"
        android:layout_marginEnd="@dimen/ButtonConstraints"
        android:layout_marginBottom="16dp"
        android:text="@string/Answer_Btn_Text_1"
        app:layout_constraintBottom_toTopOf="@+id/Answer_btn_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Answer_btn_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ButtonConstraints"
        android:layout_marginEnd="@dimen/ButtonConstraints"
        android:layout_marginBottom="16dp"
        android:text="@string/Answer_Btn_Text_2"
        app:layout_constraintBottom_toTopOf="@+id/Answer_btn_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Answer_btn_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ButtonConstraints"
        android:layout_marginEnd="@dimen/ButtonConstraints"
        android:layout_marginBottom="16dp"
        android:text="@string/Answer_Btn_Text_3"
        app:layout_constraintBottom_toTopOf="@+id/Answer_btn_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Answer_btn_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ButtonConstraints"
        android:layout_marginEnd="@dimen/ButtonConstraints"
        android:layout_marginBottom="24dp"
        android:text="@string/Answer_Btn_Text_4"
        app:layout_constraintBottom_toTopOf="@+id/Next_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Next_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Button_Next_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>